--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,75 @@
-typing_extensions~=4.12.2
-numpy<2.1.0
-pillow~=11.0.0
-pip~=23.2.1
-attrs~=24.2.0
-wheel~=0.45.1
-filelock~=3.16.1
-setuptools~=75.6.0
-dill~=0.3.9
-gast~=0.6.0
-h5py~=3.12.1
-rich~=13.9.4
-Pygments~=2.18.0
-requests~=2.32.3
-colorama~=0.4.6
-PyYAML~=6.0.2
-platformdirs~=4.3.6
-packaging~=24.2
-optree~=0.13.1
-tensorflow~=2.18.0
-scipy~=1.14.1
-torch~=2.5.1
-pandas~=2.2.3
-namex~=0.0.8
-mdurl~=0.1.2
-numba~=0.60.0
-cffi~=1.17.1
-Jinja2~=3.1.4
-pyinstaller~=6.11.1
-six~=1.16.0
-tqdm~=4.67.1
-regex~=2024.11.6
-mpmath~=1.3.0
-sympy~=1.13.1
-decorator~=4.4.2
-astunparse~=1.6.3
-tensorboard~=2.18.0
-opt_einsum~=3.4.0
-urllib3~=2.2.3
-fsspec~=2024.10.0
-MarkupSafe~=3.0.2
-joblib~=1.4.2
-certifi~=2024.8.30
-soundfile~=0.12.1
-scikit-learn~=1.5.2
-tornado~=6.4.2
-altgraph~=0.17.4
-Markdown~=3.7
-networkx~=3.4.2
-idna~=3.10
-tf_keras~=2.18.0
-wrapt~=1.17.0
-streamlit~=1.40.2
-termcolor~=2.5.0
-pefile~=2023.2.7
-flatbuffers~=24.3.25
-Werkzeug~=3.1.3
-transformers~=4.46.3
-librosa~=0.10.2.post1
-customtkinter~=5.2.2
-pydub~=0.25.1
-future~=0.18.3
-mutagen~=1.47.0
-DateTime~=5.5
-pytest~=8.3.3
-opencv-python~=4.10.0.84
-style~=1.1.6
-cryptography~=44.0.0
-docutils~=0.21.2
-torchvision~=0.20.1
-torchaudio~=2.5.1
-pypandoc~=1.14
-ffmpeg~=1.4
+opencv-python==4.10.0.84
+numpy==2.0.2
+typing_extensions==4.12.2
+future==0.18.3
+pillow==11.0.0
+style==1.1.6
+pip==23.2.1
+attrs==24.2.0
+DateTime==5.5
+wheel==0.45.1
+cryptography==44.0.0
+docutils==0.21.2
+tornado==6.4.2
+Jinja2==3.1.4
+gast==0.6.0
+h5py==3.12.1
+pytest==8.3.3
+rich==13.9.4
+Pygments==2.18.0
+decorator==4.4.2
+pywin32==308
+mdurl==0.1.2
+namex==0.0.8
+six==1.16.0
+sympy==1.13.1
+mpmath==1.3.0
+torch==2.5.1
 matplotlib==3.9.2
+astunparse==1.6.3
+tensorboard==2.18.0
+optree==0.13.1
+setuptools==75.6.0
+tqdm==4.67.1
+tensorflow==2.18.0
+scipy==1.14.1
+torchvision==0.20.1
+numba==0.60.0
+packaging==24.2
+opt_einsum==3.4.0
+colorama==0.4.6
+filelock==3.16.1
+urllib3==2.2.3
+fsspec==2024.10.0
+requests==2.32.3
+MarkupSafe==3.0.2
+certifi==2024.8.30
+altgraph==0.17.4
+Markdown==3.7
+PyYAML==6.0.2
+networkx==3.4.2
+pandas==2.2.3
+idna==3.10
+tf_keras==2.18.0
+wrapt==1.17.0
+regex==2024.11.6
+termcolor==2.5.0
+pefile==2023.2.7
+platformdirs==4.3.6
+flatbuffers==24.3.25
+dill==0.3.9
+torchaudio==2.5.1
+ffmpeg==1.4
+soundfile==0.12.1
+Werkzeug==3.1.3
+cffi==1.17.1
+streamlit==1.40.2
+pyinstaller==6.11.1
+pypandoc==1.14
+joblib==1.4.2
+librosa==0.10.2.post1
+scikit-learn==1.5.2
+customtkinter==5.2.2
+mutagen==1.47.0
+transformers==4.46.3
+pydub==0.25.1
