--- a/requirements.txt
+++ b/requirements.txt
@@ -108,6 +108,7 @@ Pygments==2.18.0
 pyinstaller==6.12.0
 pyinstaller-hooks-contrib==2025.1
 PyJWT==2.10.1
+pypandoc==1.15
 pyparsing==3.2.0
 pypiwin32==223
 PyQt5==5.15.11
@@ -161,4 +162,3 @@ urllib3==2.3.0
 watchdog==6.0.0
 Werkzeug==3.1.3
 wrapt==1.14.1
-pypandoc
