--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,11 +25,7 @@ jobs:
       with:
         python-version: "3.10.X"
     - name: Install pypa/build
-      run: >-
-        python3 -m
-        pip install
-        build
-        --user
+      run: python -m pip install --upgrade -r requirements.txt
     - name: Build a binary wheel and a source tarball
       run: python3 -m build
     - name: Store the distribution packages
