--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,9 +25,11 @@ jobs:
       with:
         python-version: "3.10.X"
     - name: Install pypa/build
-      run: python -m pip install --upgrade -r requirements.txt
+      run: |
+        python -m pip install --upgrade -r requirements.txt
+        pip install build
     - name: Build a binary wheel and a source tarball
-      run: python3 -m build
+      run: python -m build
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
       with:
