--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,7 +29,9 @@ jobs:
         python -m pip install --upgrade -r requirements.txt
         pip install build
     - name: Build a binary wheel and a source tarball
-      run: python -m build
+      run: |
+        python -m pip install --upgrade -r requirements.txt
+        python -m build
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
       with:
