--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,11 +30,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade -r requirements.txt
-        pip install build
+        pip install build --no-build-isolation
     - name: Build package
       run: |
         python -m pip install --upgrade -r requirements.txt
-        python -m build
+        python -m build --no-build-isolation
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
