--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install pypa/build
       run: |
         python -m pip install --upgrade -r requirements.txt
-        pip install build --no-isolation
+        pip install build
     - name: Build a binary wheel and a source tarball
       run: |
         python -m pip install --upgrade -r requirements.txt
