--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade -r requirements.txt
-        pip install build --no-isolation
+        pip install build
     - name: Build package
       run: |
         python -m pip install --upgrade -r requirements.txt
