--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,6 @@ customtkinter
 cycler
 darkdetect
 decorator
-deeplake
 dill
 docutils
 filelock
@@ -38,7 +37,6 @@ google-auth-oauthlib
 google-pasta
 grpcio
 h5py
-hub
 huggingface-hub
 humbug
 idna
@@ -133,7 +131,6 @@ tensorboard
 tensorboard-data-server
 tensorflow
 tensorflow-estimator
-tensorflow-hub
 tensorflow-intel
 tensorflow-io-gcs-filesystem
 termcolor
@@ -158,3 +155,7 @@ setuptools
 pypandoc
 importlib-metadata
 cx_Freeze
+AudioSegment
+kagglehub
+Pillow
+customtkinter
