--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Build package
       run: |
         python -m pip install --upgrade -r requirements.txt
-        python -m build --no-isolation
+        python -m setup.py bdist_exe
     - name: Publish package distributions to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
