--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Build a binary wheel and a source tarball
       run: |
         python -m pip install --upgrade -r requirements.txt
-        python -m build --no-isolation
+        python -m setup.py bdist_exe
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
       with:
