--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -5,33 +5,41 @@ on:
     types: [published]
 
 permissions:
-  id-token: write # This is required for requesting the JWT
-  contents: write  # This is required for actions/checkout
+  id-token: write  # Required for OpenID authentication
+  contents: write  # Required for actions/checkout
 
 jobs:
   deploy:
-
     runs-on: ubuntu-latest
     environment:
       name: pypi
       url: https://pypi.org/p/VoiceAuth
+
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.10.X'
+        python-version: "3.10"
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade -r requirements.txt
-        pip install build
-    - name: Build package
-      run: |
-        python -m pip install --upgrade -r requirements.txt
-        python -m setup.py bdist_exe
-    - name: Publish package distributions to TestPyPI
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt build
+
+    - name: Build package with no isolation
+      run: python -m build --no-isolation
+
+    - name: Publish package to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
-        repository-url: https://test.pypi.org/legacy/    
-    - name: Publish package distributions to PyPI
+        repository-url: https://test.pypi.org/legacy/
+        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+
+    - name: Publish package to PyPI
+      if: success()
       uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        password: ${{ secrets.PYPI_API_TOKEN }}
