--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,4 +1,4 @@
-name: Upload Python Package
+name: Voice Auth Upload Python Package
 
 on:
   release:
@@ -26,11 +26,14 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip wheel cx_Freeze build twine
         pip install -r requirements.txt build
 
-    - name: Build package with no isolation
-      run: python -m build --no-isolation
+    - name: Build distribution packages
+      run: |
+        pip install -r requirements.txt build
+        python -m setup.py build --no-isolation 
+
 
     - name: Publish package to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
