--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -27,11 +27,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip wheel cx_Freeze build twine
-        pip install -r requirements.txt build
+        pip install -r requirements.txt
 
     - name: Build distribution packages
       run: |
-        pip install -r requirements.txt build
+        pip install -r requirements.txt
         python -m setup.py build
 
 
