--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Build distribution packages
       run: |
         pip install -r requirements.txt
-        python -m setup.py build
+        python -m build --no-isolation
 
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
