--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -26,8 +26,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip wheel cx_Freeze build twine
-        pip install -r requirements.txt
+        python -m pip install --upgrade pip wheel cx_Freeze build twine  -r requirements.txt
 
     - name: Build distribution packages
       run: |
