--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,7 +8,7 @@ on:
 
 permissions:
   id-token: write # Required for requesting the JWT
-  contents: write  # Required for actions/checkout
+  contents: read  # Required for actions/checkout
 
 jobs:
   build:
